# ConWeave-Lib

./: .gitignore  CMakeLists.txt  README.md
ConWeave-Lib/Src/String/: basic_string.ixx  string_core.ixx
ConWeave-Library/Src/String/: string.ixx  string_box.ixx
Describes/FixedVector/: ClassInterface-FixedVector.md  UpdateLog-FixedVector.md
Describes/String/: ClassInterface-String.md  Future-String.md  UpdateLog-String.md
ModernLibrary/Execute/: main.cpp
ModernLibrary/Src/FixedVector/: basic_fixed_vec.ixx  fixed_vec_core.ixx
ModernLibrary/Src/String/: basic_string.ixx  string_core.ixx
PerformanceReport/: README.md
